--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
                 class="d-flex flex-column justify-content-center align-items-center"
               >
                 <img
-                  src="images/random1.png"
+                  src="images/landing.png"
                   alt="Project 1"
                   class="img-fluid"
                 />
-                <h4 class="mt-2">Project 1</h4>
+                <h4 class="mt-2">Landing Page</h4>
                 <p class="text-center">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Itaque ullam recusandae, qui quod quas eveniet nemo minima sit
-                  et excepturi porro atque soluta ipsum nam.
+                  This is a simple landing page displaying the features and
+                  option to download the app the page is promoting , with proper
+                  sections to make it an user-friendly website.
                 </p>
               </div>
             </div>
@@ -108,15 +108,14 @@
                 class="d-flex flex-column justify-content-center align-items-center"
               >
                 <img
-                  src="images/random1.png"
+                  src="images/tic-tac-toe.png"
                   alt="Project 2"
                   class="img-fluid"
                 />
-                <h4 class="mt-2">Project 2</h4>
+                <h4 class="mt-2">Tic-tac-toe</h4>
                 <p class="text-center">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem
-                  facere nisi sed, quod ullam repellendus similique provident
-                  mollitia iste excepturi.
+                  The classic tic-tac-toe game created using simple Hooks in
+                  React.
                 </p>
               </div>
             </div>
@@ -127,16 +126,15 @@
                 class="d-flex flex-column justify-content-center align-items-center"
               >
                 <img
-                  src="images/random1.png"
+                  src="images/FoodWebsite.png"
                   alt="Project 3"
                   class="img-fluid"
                 />
-                <h4 class="mt-2">Project 3</h4>
+                <h4 class="mt-2">FoodWeb</h4>
                 <p class="text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Officiis harum mollitia iure voluptatum quasi ex fugit atque
-                  unde expedita. Saepe, quibusdam. Sapiente harum aut
-                  laudantium?
+                  A food website created using MERN stack consisting of
+                  functions like register, login, search, cart functionality,
+                  checkout, etc.
                 </p>
               </div>
             </div>
